[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/ChunkSensors.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 256, 7 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 7, 256 )

[node name="ChunkSensors" type="Node2D"]

script = ExtResource( 1 )
top = false
left = false
right = false
bottom = false

[node name="Up" type="Area2D" parent="." index="0"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="Shape" type="CollisionShape2D" parent="Up" index="0"]

position = Vector2( 256, 7 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Down" type="Area2D" parent="." index="1"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]

[node name="Shape" type="CollisionShape2D" parent="Down" index="0"]

position = Vector2( 256, 505 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Left" type="Area2D" parent="." index="2"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]

[node name="Shape" type="CollisionShape2D" parent="Left" index="0"]

position = Vector2( 7, 256 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Right" type="Area2D" parent="." index="3"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]

[node name="Shape" type="CollisionShape2D" parent="Right" index="0"]

position = Vector2( 505, 256 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[connection signal="body_entered" from="Up" to="." method="_on_Up_body_entered"]

[connection signal="body_entered" from="Down" to="." method="_on_Down_body_entered"]

[connection signal="body_entered" from="Left" to="." method="_on_Left_body_entered"]

[connection signal="body_entered" from="Right" to="." method="_on_Right_body_entered"]


